# freight-workspace

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  chat.md
.claude/: settings.json
crates/freight-migrate/: Cargo.toml
crates/freight-migrate/src/: adopt.rs  cmake_scan.rs  fileapi.rs  lib.rs  main.rs  native.rs
crates/libtexprintf/: Cargo.toml  README.md  TODO.md  build.rs
crates/libtexprintf/src/: lib.rs
docs/: README.md  architecture.md  cmake-lossless.md  registry-setup.md  vcpkg-migration.md
editors/nvim-freight/: README.md
editors/nvim-freight/ftdetect/: freight.lua
editors/nvim-freight/ftplugin/: freight.lua
editors/nvim-freight/lua/freight/: init.lua
editors/vscode-freight/: README.md
scripts/: fortran_lsp_compare.py  lsp_hints_compare.py
tapes/: freight-add-tui.tape  freight-doc-tui.tape  freight-fetch-build.tape  freight-new.tape
